--- a/camagru/Public/assets/css/form.css
+++ b/camagru/Public/assets/css/form.css
@@ -108,6 +108,10 @@
     border: 1px solid rgba(0,0,0,.275);
 }
 
+.main-content input:last-child, .main-content .button:last-child {
+    margin: 0;
+}
+
 .main-content .button {
     text-decoration: none;
 }
