83 files changed, 6584 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/home.css
+++ b/camagru/Public/assets/css/home.css
@@ -326,8 +326,12 @@ body[focus_comment] .posts-row .post .comments {
         width: 100%;
     }
 
-    .row {
-        margin: 1rem 0;
+    .posts-row {
+        margin: 0 0 1rem 0;
+    }
+
+    .users-row {
+        margin: 1rem 0 0 0;
     }
 
     .users-row .row-title, .users-row .user-infos {
