--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -18,6 +18,11 @@
     flex-basis: 60%;
 }
 
+.main-row .camera canvas {
+    width: 100%;
+    height: 100%;
+}
+
 .pics-row {
     flex-basis: 35%;
     background-color: #fff;
