--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -18,7 +18,7 @@
     flex-basis: 60%;
 }
 
-.main-row .camera canvas {
+.main-row .camera #render, .main-row .camera #video {
     width: 100%;
     height: 100%;
 }
