--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -23,6 +23,15 @@
     height: 100%;
 }
 
+.video {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    font-size: 0;
+    margin: .25rem 0;
+}
+
 .video .details {
     width: 100%;
     height: 100%;
