--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -29,33 +29,27 @@
     overflow: hidden;
     display: inline-block;
     font-size: 0;
-    margin: .25rem 0;
 }
 
-.video .details {
+.video .video-overlay {
     width: 100%;
     height: 100%;
     display: flex;
     position: absolute;
     bottom: 0;
-    background-color: rgba(43, 43, 43, .6);
     color: #fff;
     opacity: 1;
     transition: 0.15s ease-in-out;
     font-size: 15px;
 }
 
-.video .details .row {
+.video .video-overlay .row {
     position: relative;
     width: 100%;
     display: flex;
 }
 
-.video .details .row .content {
-    margin: auto;
-}
-
-.video .details .row .delete-post a {
+.video .video-overlay .row .take-picture a {
     text-decoration: none;
     color: #fff;
 }
