85 files changed, 6711 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -50,7 +50,16 @@
 }
 
 .video .video-overlay .row .content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.video .video-overlay .row .take-picture {
     margin: 0 auto;
+}
+
+.video .video-overlay .row .take-picture .content {
     bottom: 0;
 }
 
