85 files changed, 6705 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -56,11 +56,7 @@
 }
 
 .video .video-overlay .row .take-picture {
-    margin: 0 auto;
-}
-
-.video .video-overlay .row .take-picture .content {
-    bottom: 0;
+    margin: auto auto 0 auto;
 }
 
 .video .video-overlay .row .take-picture a {
