--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -51,7 +51,7 @@
 
 .video .video-overlay .row .content {
     display: flex;
-    margin: 0 auto;
+    margin: auto auto 0 auto;
 }
 
 .video .video-overlay .row .overlay-button {
