85 files changed, 6735 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -64,6 +64,10 @@
     color: #fff;
 }
 
+.video .video-overlay .row .reverse-cam i {
+    font-size: 1rem;
+}
+
 .video .video-overlay .row .take-picture i {
     font-size: 2.5rem;
 }
