85 files changed, 6777 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -92,7 +92,21 @@
 }
 
 @media only screen and (max-width: 750px) {
+    .montage-row {
+        flex-direction: column;
+        max-width: 500px;
+    }
 
+    .main-row {
+        order: 2;
+        margin: 0 0 1rem 0;
+    }
+
+    .pics-row {
+        order: 1;
+        width: 100%;
+        margin: 1rem 0 0 0;
+    }
 }
 
 @media only screen and (max-width: 500px) {
