--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -68,7 +68,7 @@
     font-size: 2.5rem;
 }
 
-.video-overlay .overlay-button.disable {
+.video-overlay .overlay-button.disable a {
     cursor: not-allowed;
     color: #999;
 }
