85 files changed, 6784 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -70,7 +70,7 @@
 
 .video-overlay .overlay-button.disable a {
     cursor: not-allowed;
-    color: #555;
+    color: #999 !important;
 }
 
 .pics-row {
