85 files changed, 6794 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -55,7 +55,7 @@
 }
 
 .video .video-overlay .row .content.hidden {
-    opacity: 0;
+    display: none;
 }
 
 .video .video-overlay .row .overlay-button {
