--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -100,6 +100,22 @@
     color: #262626;
 }
 
+.pics-row .pic {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    font-size: 0;
+    margin: .25rem 0;
+}
+
+.pics-row .pic .picture img {
+    width: 100%;
+    height: 100%;
+    transition: all ease .25s;
+    transform: scale(1.025);
+}
+
 @media only screen and (max-width: 750px) {
     .montage-row {
         flex-direction: column;
