--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -100,6 +100,11 @@
     color: #262626;
 }
 
+.pics-row .pics {
+    max-height: 70vh;
+    overflow: auto;
+}
+
 .pics-row .pic {
     width: 100%;
     position: relative;
@@ -114,6 +119,43 @@
     height: 100%;
     transition: all ease .25s;
     transform: scale(1.025);
+}
+
+.pics-row .pic .details {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(43, 43, 43, .6);
+    color: #fff;
+    opacity: 0;
+    transition: 0.15s ease-in-out;
+    font-size: 15px;
+}
+
+.pics-row .pic .details .row {
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+.pics-row .pic .details .row .content {
+    margin: auto;
+}
+
+.pics-row .pic .details .row .delete-post a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.pics-row .pic .pic:hover > .picture img {
+    transform: scale(1.075);
+}
+
+.pics-row .pic .pic:hover .details {
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 @media only screen and (max-width: 750px) {
