--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -174,6 +174,11 @@
         width: 100%;
         margin: 1rem 0 0 0;
     }
+
+    .pics {
+        flex-direction: row;
+        overflow-x: auto;
+    }
 }
 
 @media only screen and (max-width: 500px) {
