85 files changed, 6914 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -102,7 +102,9 @@
 
 .pics-row .pics {
     max-height: 70vh;
-    overflow: auto;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .pics-row .pic {
