85 files changed, 6914 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -177,7 +177,7 @@
         margin: 1rem 0 0 0;
     }
 
-    .pics {
+    .pics-row .pics {
         flex-direction: row;
         overflow-x: auto;
     }
