85 files changed, 6927 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -109,12 +109,15 @@
 
 .pics-row .pic {
     display: flex;
-    /*width: 100%;*/
+    margin: .25rem 0;
+    overflow: hidden;
     /*position: relative;*/
-    /*overflow: hidden;*/
     /*display: inline-block;*/
     /*font-size: 0;*/
-    /*margin: .25rem 0;*/
+}
+
+.pics-row .pic .picture {
+    height: 10rem;
 }
 
 .pics-row .pic .picture img {
