--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -176,6 +176,14 @@
         flex-flow: row nowrap;
         overflow-x: auto;
     }
+
+    .pics-row .picture {
+        height: 10rem;
+    }
+
+    .pics-row .picture img {
+        width: auto;
+    }
 }
 
 @media only screen and (max-width: 500px) {
