85 files changed, 7016 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -166,7 +166,7 @@
     .pics-row {
         order: 1;
         width: 100%;
-        margin: 1rem 0 0 0;
+        margin: 1rem 0;
     }
 
     .pics-row .pic {
