85 files changed, 6986 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -2,7 +2,7 @@
     display: flex;
     padding: 0 1rem;
     max-width: 850px;
-    margin: 0 auto;
+    margin: 1rem auto;
     justify-content: space-between;
     transition: 0.2s ease;
     transition-delay:  0.05s;
