85 files changed, 6981 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -25,6 +25,11 @@
     height: 100%;
 }
 
+.main-row .camera {
+    flex-direction: column;
+    display: flex;
+}
+
 .video {
     width: 100%;
     position: relative;
