--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -23,13 +23,15 @@
 .main-row .camera #render, .main-row .camera #video {
     width: 100%;
     height: 100%;
+}
+
+.main-row .camera .render, .main-row .camera .video {
     flex-basis: 45%;
 }
 
 .main-row .camera {
     display: flex;
     justify-content: space-between;
-
 }
 
 .video {
