85 files changed, 6996 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -186,7 +186,7 @@
         flex: 1;
     }
 
-    .montage-row .camera .render {
+    .montage-row .camera .video {
         margin-bottom: 1rem;
     }
 }
