85 files changed, 6997 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -18,6 +18,7 @@
 .montage-row .main-row {
     order: 2;
     margin: 0 0 1rem 0;
+    width: 100%;
 }
 
 .main-row .camera #render, .main-row .camera #video {
