85 files changed, 7002 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -26,6 +26,13 @@
     height: 100%;
 }
 
+.main-row .camera .render {
+    border: 1px solid rgba(0,0,0,.0975);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+}
+
 .main-row .camera .render, .main-row .camera .video {
     flex-basis: 49.5%;
 }
