86 files changed, 7017 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -84,13 +84,17 @@
     color: #fff;
 }
 
-.montage-overlay .row .take-picture i {
+.video-overlay .take-picture i {
     font-size: 2.5rem;
 }
 
 .montage-overlay .overlay-button.disable a {
     cursor: not-allowed;
     color: #999;
+}
+
+.render-overlay form input {
+    display: none;
 }
 
 .pics-row {
