86 files changed, 7022 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -97,6 +97,12 @@
     display: none;
 }
 
+.render-overlay form label {
+    width: 1rem;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
 .pics-row {
     background-color: #fff;
     border-radius: 2px;
