86 files changed, 7028 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -97,7 +97,7 @@
     display: none;
 }
 
-.render-overlay form .filter {
+.render-overlay .filter {
     width: 2rem;
     border-radius: 50%;
     overflow: hidden;
@@ -105,7 +105,7 @@
 
 }
 
-.render-overlay form .filter img {
+.render-overlay .filter img {
     width: 100%;
 }
 
