--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -99,6 +99,7 @@
 
 .render-overlay .filter {
     width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     overflow: hidden;
     border: 3px solid white;
