89 files changed, 7116 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -93,6 +93,14 @@
     color: #999;
 }
 
+.render-overlay {
+    opacity: 0;
+}
+
+.render:hover .render-overlay {
+    opacity: 1;
+}
+
 .render-overlay form input {
     display: none;
 }
