--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -114,7 +114,7 @@ body[has_aside] .aside-bar {
     overflow-y: auto !important;
 }
 
-.aside-bar .aside-button {
+.aside-bar .button {
     width: 100%;
     height: 3rem;
     display: flex;
@@ -123,7 +123,7 @@ body[has_aside] .aside-bar {
     margin: 1rem 0;
 }
 
-.aside-button .button-content {
+.button .button-content {
     margin: 0 auto;
     width: 75%;
     position: relative;
@@ -138,7 +138,7 @@ body[has_aside] .aside-bar {
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
 }
 
-.aside-bar .aside-button a {
+.aside-bar .button a {
     width: 100%;
     height: 100%;
     padding: 0;
@@ -147,23 +147,23 @@ body[has_aside] .aside-bar {
     display: flex;
 }
 
-.aside-bar .aside-button span {
+.aside-bar .button span {
     margin: auto;
 }
 
-.aside-button.button-login .button-content {
+.button.button-login .button-content {
     background-color: #2b3441;
 }
 
-.aside-button.button-login .button-content:hover {
+.button.button-login .button-content:hover {
     background-color: #202020;
 }
 
-.aside-button.button-login .button-content a {
+.button.button-login .button-content a {
     color: #fff;
 }
 
-.aside-button:hover {
+.button:hover {
 }
 
 .aside-bar li {
