89 files changed, 7149 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -10,6 +10,10 @@
     flex-direction: column;
 }
 
+.buttons-row {
+    order: 3;
+}
+
 .row {
     transition: margin 0.2s ease;
     transition-delay:  0.05s;
