--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -114,7 +114,7 @@ body[has_aside] .aside-bar {
     overflow-y: auto !important;
 }
 
-.aside-bar .button {
+.button {
     width: 100%;
     height: 3rem;
     display: flex;
@@ -138,7 +138,7 @@ body[has_aside] .aside-bar {
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
 }
 
-.aside-bar .button a {
+.button a {
     width: 100%;
     height: 100%;
     padding: 0;
@@ -147,7 +147,7 @@ body[has_aside] .aside-bar {
     display: flex;
 }
 
-.aside-bar .button span {
+.button span {
     margin: auto;
 }
 
