--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -212,6 +212,55 @@
     opacity: 1;
 }
 
+.montage-button {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    margin: 1rem 0;
+}
+
+.montage-button .button-content {
+    margin: 0 auto;
+    width: 75%;
+    position: relative;
+    display: flex;
+    background-color: #fafafa;
+    border: 1px solid rgba(0,0,0,.0975);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
+    -o-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
+    transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
+}
+
+.montage-button a {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    text-decoration: none;
+    font-size: 1.25rem;
+    display: flex;
+}
+
+.montage-button span {
+    margin: auto;
+}
+
+.montage-button.button-blue .button-content {
+    background-color: #2b3441;
+}
+
+.montage-button.button-blue .button-content:hover {
+    background-color: #202020;
+}
+
+.montage-button.button-blue .button-content a {
+    color: #fff;
+}
+
 @media only screen and (max-width: 750px) {
     .montage-row .camera {
         flex-direction: column;
