--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -221,12 +221,11 @@
 }
 
 .montage-button .button-content {
-    margin: 0 auto;
-    width: 44%;
-    position: relative;
+    width: 47%;
     display: flex;
     background-color: #fafafa;
     border: 1px solid rgba(0,0,0,.0975);
+    justify-content: space-between;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
