89 files changed, 7168 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -82,6 +82,7 @@
 .montage-overlay .row .overlay-button {
     padding-bottom: 1rem;
     margin: auto .25rem 0 .25rem;
+    cursor: pointer;
 }
 
 .montage-overlay .row .overlay-button:not(.disable) a {
