89 files changed, 7198 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -248,6 +248,10 @@
     margin: auto;
 }
 
+.filters-button, .filters-button .button-content {
+    margin-left: auto;
+}
+
 .montage-button.button-blue .button-content {
     background-color: #2b3441;
 }
