89 files changed, 7226 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -53,6 +53,10 @@
     font-size: 0;
 }
 
+.render[hide_filters] {
+    display: none;
+}
+
 .montage-overlay {
     width: 100%;
     height: 100%;
