3 files changed, 18 insertions(+), 17 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -110,6 +110,7 @@
 .no-cam-overlay .row .content {
     margin: auto;
     color: #fff;
+    font-size: 1.5rem;
 }
 
 .video-overlay .take-picture i {
