--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -258,6 +258,12 @@
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
 }
 
+.montage-button #import {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
 .montage-button a {
     width: 100%;
     height: 100%;
