--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -264,7 +264,7 @@
     z-index: -1;
 }
 
-.montage-button a {
+.montage-button a, .montage-button label {
     width: 100%;
     height: 100%;
     padding: 0;
