3 files changed, 23 insertions(+), 22 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -43,6 +43,7 @@
 .main-row .camera {
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
 .video, .render {
