2 files changed, 25 insertions(+), 20 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -152,6 +152,11 @@
     width: 100%;
 }
 
+.render .filter-img {
+    cursor: crosshair;
+    border: 2px dashed black;
+}
+
 .pics-row {
     background-color: #fff;
     border-radius: 2px;
