2 files changed, 7 insertions(+), 7 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -152,9 +152,9 @@
     width: 100%;
 }
 
-.render .filter-img {
-    cursor: crosshair;
-    border: 2px dashed black;
+.render .filter-img:hover {
+    cursor: move;
+    border: 2px dashed white;
 }
 
 .pics-row {
