2 files changed, 10 insertions(+), 6 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -154,6 +154,10 @@
 
 .render .filter-img:hover {
     cursor: move;
+    border: 2px transparent;
+}
+
+.render .filter-img:hover {
     border: 2px dashed white;
 }
 
