2 files changed, 21 insertions(+), 21 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -98,6 +98,7 @@
 .montage-overlay .row .overlay-button:not(.disable) a {
     text-decoration: none;
     color: #fff;
+    cursor: pointer;
 }
 
 .no-cam-overlay {
