--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -89,16 +89,18 @@
     display: none;
 }
 
+.overlay-button a {
+    cursor: pointer;
+}
+
 .montage-overlay .row .overlay-button {
     padding-bottom: 1rem;
     margin: auto .25rem 0 .25rem;
-    cursor: pointer;
 }
 
 .montage-overlay .row .overlay-button:not(.disable) a {
     text-decoration: none;
     color: #fff;
-    cursor: pointer;
 }
 
 .no-cam-overlay {
