--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -89,13 +89,14 @@
     display: none;
 }
 
-.overlay-button a {
+.a-button {
     cursor: pointer;
 }
 
 .montage-overlay .row .overlay-button {
     padding-bottom: 1rem;
     margin: auto .25rem 0 .25rem;
+    cursor: pointer;
 }
 
 .montage-overlay .row .overlay-button:not(.disable) a {
