--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -138,6 +138,14 @@ body[has_aside] .aside-bar {
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
 }
 
+.montage-button.button-blue .button-content {
+    background-color: #2b3441;
+}
+
+.montage-button.button-blue .button-content:hover {
+    background-color: #202020;
+}
+
 .aside-bar .aside-button a {
     width: 100%;
     height: 100%;
