--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -138,12 +138,28 @@ body[has_aside] .aside-bar {
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
 }
 
-.montage-button.button-blue .button-content {
+.button-blue .button-content {
     background-color: #2b3441;
 }
 
-.montage-button.button-blue .button-content:hover {
+.button-blue .button-content:hover {
     background-color: #202020;
+}
+
+.button-red .button-content {
+    background-color: #e53935;
+}
+
+.button-red .button-content:hover {
+    background-color: #b71c1c;
+}
+
+.button-green .button-content {
+    background-color: #30c849;
+}
+
+.button-green .button-content:hover {
+    background-color: #189937;
 }
 
 .aside-bar .aside-button a {
