--- a/camagru/Public/assets/css/general.css
+++ b/camagru/Public/assets/css/general.css
@@ -114,7 +114,7 @@ body[has_aside] .aside-bar {
     overflow-y: auto !important;
 }
 
-.aside-bar .aside-button {
+.c-button {
     width: 100%;
     height: 3rem;
     display: flex;
@@ -123,7 +123,7 @@ body[has_aside] .aside-bar {
     margin: 1rem 0;
 }
 
-.aside-button .button-content {
+.c-button .button-content {
     margin: 0 auto;
     width: 75%;
     position: relative;
@@ -136,58 +136,45 @@ body[has_aside] .aside-bar {
     -webkit-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
     -o-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
     transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
+    color: white;
 }
 
-.button-blue .button-content {
+.c-button.button-blue .button-content {
     background-color: #2b3441;
 }
 
-.button-blue .button-content:hover {
+.c-button.button-blue .button-content:hover {
     background-color: #202020;
 }
 
-.button-red .button-content {
+.c-button.button-red .button-content {
     background-color: #e53935;
 }
 
-.button-red .button-content:hover {
+.c-button.button-red .button-content:hover {
     background-color: #b71c1c;
 }
 
-.button-green .button-content {
+.c-button.button-green .button-content {
     background-color: #30c849;
 }
 
-.button-green .button-content:hover {
+.c-button.button-green .button-content:hover {
     background-color: #189937;
 }
 
-.aside-bar .aside-button a {
+.c-button a, .c-button label {
     width: 100%;
     height: 100%;
     padding: 0;
     text-decoration: none;
     font-size: 1.25rem;
     display: flex;
+    cursor: pointer;
 }
 
-.aside-bar .aside-button span {
+.c-button span {
     margin: auto;
-}
-
-.aside-button.button-login .button-content {
-    background-color: #2b3441;
-}
-
-.aside-button.button-login .button-content:hover {
-    background-color: #202020;
-}
-
-.aside-button.button-login .button-content a {
-    color: #fff;
-}
-
-.aside-button:hover {
 }
 
 .aside-bar li {
