--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -251,46 +251,10 @@
     opacity: 1;
 }
 
-.montage-button {
-    width: 49.5%;
-    height: 3rem;
-    display: flex;
-    bottom: 0;
-    justify-content: space-between;
-}
-
-.montage-button .button-content {
-    width: 48%;
-    display: flex;
-    background-color: #fafafa;
-    border: 1px solid rgba(0,0,0,.0975);
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
-    -webkit-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
-    -o-transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
-    transition: border 0.2s ease-out, background 0.2s ease-out, color 0.2s ease-out, width 0.6s ease-out;
-}
-
-.montage-button #import {
+.c-button #import {
     opacity: 0;
     position: absolute;
     z-index: -1;
-}
-
-.montage-button a, .montage-button label {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    text-decoration: none;
-    font-size: 1.25rem;
-    display: flex;
-    cursor: pointer;
-    color: #fff;
-}
-
-.montage-button span {
-    margin: auto;
 }
 
 .filters-button, .filters-button .button-content {
@@ -310,7 +274,7 @@
         margin-bottom: 1rem;
     }
 
-    .montage-button {
+    .c-button {
         width: 100%;
     }
 }
