--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -257,6 +257,23 @@
     z-index: -1;
 }
 
+
+.c-button.montage-button {
+    width: 49.5%;
+    justify-content: space-between;
+    margin: 0;
+}
+
+.c-button.montage-button .button-content {
+    width: 48%;
+}
+
+.c-button.montage-button #import {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
 .filters-button, .filters-button .button-content {
     margin-left: auto;
 }
