89 files changed, 7263 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -274,7 +274,7 @@
     z-index: -1;
 }
 
-.filters-button, .filters-button .button-content {
+.c-button.filters-button, .c-button.filters-button .button-content {
     margin-left: auto;
 }
 
