89 files changed, 7265 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -265,11 +265,12 @@
     width: 49.5%;
 }
 
-.c-button.montage-button .button-content, .c-button.filters-button .button-content {
-    margin: 0;
+.c-button.filters-button .button-content {
+    margin-left: auto;
 }
 
-.c-button.montage-button .button-content {
+.c-button.montage-button .button-content, .c-button.filters-button .button-content {
+    margin: 0;
     width: 48%;
 }
 
