89 files changed, 7265 insertions(+), 310 deletions(-)

--- a/camagru/Public/assets/css/montage.css
+++ b/camagru/Public/assets/css/montage.css
@@ -266,7 +266,7 @@
 }
 
 .c-button.filters-button .button-content {
-    margin-left: auto;
+    margin-left: auto !important;
 }
 
 .c-button.montage-button .button-content, .c-button.filters-button .button-content {
